--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "infinite-react-carousel": "^1.2.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,8 +30,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "infinite-react-carousel": "^1.1.7"
   }
 }
